# wldmania

./: .gitignore  Cargo.toml  README.md
items/: README.md
src/: config.rs  item_id_pairs.rs  main.rs  prefix_names.rs  req_file.rs  world.rs
templates/: bless.list  itemhunt.list  itemhunt.toml
terraria-strings/: Cargo.toml  item_id_list.txt
terraria-strings/src/: lib.rs
terraria-wld/: Cargo.toml
terraria-wld/src/: lib.rs
wldmanip/: Cargo.toml
wldmanip/src/: main.rs
