[package]
name = "wldmanip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
directories = "4.0.1"
egui-macroquad = "0.9.0"
rfd = "0.8.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
terraria-wld = { path = "../terraria-wld" }
recently_used_list = { git = "https://github.com/crumblingstatue/recently_used_list.git" }
